Update SecurityConfig to use configurable CORS origins from application.properties